[gd_scene load_steps=10 format=3 uid="uid://l8pquanc1uck"]

[ext_resource type="Script" path="res://enemy.gd" id="1_bjkc0"]
[ext_resource type="Texture2D" uid="uid://bf32x2tdk3mew" path="res://sprites/free_monsters_0.png" id="1_f1epp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hcr6j"]
atlas = ExtResource("1_f1epp")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cb8sp"]
atlas = ExtResource("1_f1epp")
region = Rect2(64, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hp6o"]
atlas = ExtResource("1_f1epp")
region = Rect2(112, 32, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_fv2jn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcr6j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cb8sp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hp6o")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7x1rn"]
radius = 6.0
height = 16.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jasf6"]
radius = 28.0
height = 64.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wpk1a"]
bg_color = Color(1, 0.192157, 0, 1)

[node name="enemy" type="RigidBody2D"]
collision_layer = 4
collision_mask = 4
mass = 0.01
gravity_scale = 0.0
lock_rotation = true
angular_damp_mode = 1
script = ExtResource("1_bjkc0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_fv2jn")
autoplay = "default"
frame_progress = 0.286693

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
rotation = 1.5708
scale = Vector2(4, 4)
shape = SubResource("CapsuleShape2D_7x1rn")
debug_color = Color(0.4, 0.47451, 0.980392, 0.419608)

[node name="hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(-1, 4)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_jasf6")
debug_color = Color(0.380392, 0.611765, 0, 0.419608)

[node name="death_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HP_bar" type="ProgressBar" parent="."]
offset_left = -29.0
offset_top = 32.0
offset_right = 29.0
offset_bottom = 36.0
theme_override_styles/fill = SubResource("StyleBoxFlat_wpk1a")
rounded = true
show_percentage = false

[connection signal="body_entered" from="hurtbox" to="." method="player_body_entered"]
[connection signal="timeout" from="death_timer" to="." method="_on_death_timer_timeout"]
